fix: Fixed a minor overflow effect

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ table {
 }
 .displayTable {
   max-height: 50vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   border: 2px solid white;
   border-radius: 10px;
 }
